k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpe-backend-deploy
  namespace: dpe-ns
  labels:
    app: dpe-backend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dpe-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1

  template:
    metadata:
      labels:
        app: dpe-backend 
    spec:
      containers: 
        - name: dpe-backend-container
          image: cloudwithrk/dpe-backend:latest
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi

          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

          volumeMounts:
            - name: ssh-key-volume
              mountPath: /root/.ssh

      volumes:
        - name: ssh-key-volume
          secret:
            secretName: ssh-key-secret

      restartPolicy: Always
