k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dpe-frontend-svc
  namespace: dpe-ns
spec:
  type: NodePort 
  selector:
    app: dpe-frontend
  ports:
    - name: frontend
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
