k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dpe-backend-svc
  namespace: dpe-ns
spec:
  selector:
    app: dpe-backend
  # type: ClusterIP 
  ports:
  - name: backend
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30800
