k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dpe-ingress
  namespace: dpe-ns
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - dpe.hicloud.co.in
    # secretName: dpe-tls-secret
  rules:
  - host: dpe.hicloud.co.in
    http:
      paths:
      - path: /apps
        pathType: Prefix
        backend:
          service:
            name: dpe-frontend-svc
            port:
              number: 80
